<!--
    Tanggal Pengerjaan : 16 April 2025
    Nama    : Fajar Krismahendra Bintang Pangestu
    NIM     : 10122322
    Kelas   : ANDROID - 4
-->
<resources>
    <string name="app_name">10122322Latihan5</string>

    <string name="digiteam">DigiTeam</string>
    <string name="tag1">Digital Together Everyone Achieve More</string>
    <string name="tag2">Jabar Digital Service</string>

    <string name="nama">Dias Eka Fredianto, S.Kom, B.IT</string>
    <string name="divisi">UI Designer</string>

    <string name="jam_kerja">Jam Kerja Bulan Ini</string>
    <string name="jam_kerja_bulan">Jam kerja kamu bulan ini: 130.53 Jam</string>
    <string name="jam">130.53 JAM</string>
    <string name="batas_minimum">Batas Minimum Jam Kerja 170 jam/bulan</string>
    <string name="checkin">Checkin</string>

    <string name="laporankamu">Laporan Kamu</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="buatlaporan">Buat Laporan</string>

    <string name="izin">Izin</string>
    <string name="kehadiran">Kehadiran</string>
    <string name="laporan">Laporan</string>
    <string name="agenda">Agenda</string>
    <string name="booking">Booking</string>
    <string name="wiki">Wiki</string>
</resources>