<?xml version="1.0" encoding="utf-8"?>
<!--
    Tanggal Pengerjaan : 16 April 2025
    Nama    : Fajar Krismahendra Bintang Pangestu
    NIM     : 10122322
    Kelas   : ANDROID - 4
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray50"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_digiteam" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/logo_digiteam" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digiteam"
            android:textSize="16sp"
            android:textColor="@color/gray900"
            android:textStyle="bold"
            android:paddingVertical="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag1"
            android:textSize="12sp"
            android:paddingVertical="1dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag2"
            android:textSize="12sp"
            android:paddingVertical="1dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="175dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photoprofile" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/divisi"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="237dp"
            android:layout_marginTop="247dp"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/jam_kerja"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:paddingTop="16dp"
                    android:paddingStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="39dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/jam_kerja_bulan"
                    android:textColor="@color/blue900"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    tools:layout_editor_absoluteX="49dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/green600"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10">

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingTop="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/batas_minimum"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2"
                    tools:layout_editor_absoluteX="95dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/checkin"
                    android:backgroundTint="@color/green700"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>





        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="416dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="508dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <!-- Laporan -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/laporankamu"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/maret"
                        android:textColor="@color/green900"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/april"
                        android:textColor="@color/green900"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="148dp"
                        android:layout_height="208dp"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bln_maret"
                        android:contentDescription="@string/digiteam"/>


                    <ImageView
                        android:layout_width="148dp"
                        android:layout_height="208dp"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/bln_april"
                        android:contentDescription="@string/digiteam"/>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="26dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="@color/green700"
                    android:text="@string/buatlaporan" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- GridLayout for icons -->
        <GridLayout
            android:id="@+id/gridIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:columnCount="3"
            android:rowCount="2"
            app:layout_constraintTop_toBottomOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Grid Item 1: Izin -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon_izin"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vector_izin" />
                <TextView
                    android:id="@+id/title_izin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Izin"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Grid Item 2: Kehadiran -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon_kehadiran"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vector_kehadiran" />
                <TextView
                    android:id="@+id/title_kehadiran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kehadiran"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Grid Item 3: Laporan -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon_laporan"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vector_laporan" />
                <TextView
                    android:id="@+id/title_laporan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Laporan"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Grid Item 4: Agenda -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon_agenda"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vector_agenda" />
                <TextView
                    android:id="@+id/title_agenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agenda"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Grid Item 5: Booking -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon_booking"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vector_booking" />
                <TextView
                    android:id="@+id/title_booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Booking"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Grid Item 6: Wiki -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/icon_wiki"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/vector_wiki" />
                <TextView
                    android:id="@+id/title_wiki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wiki"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="center" />
            </LinearLayout>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>